update the notebook

--- a/Assembly/DebruijnGraph/GASM.ipynb
+++ b/Assembly/DebruijnGraph/GASM.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -21,20 +21,20 @@
     "    return seq[::-1]\n",
     "\n",
     "import networkx as nx\n",
-    "class deburijnGraph(nx.MultiDiGraph):\n",
+    "class deburijnGraph():\n",
     "    def __init__(self, readList = [], k = 4):\n",
-    "        nx.MultiDiGraph.__init__(self)\n",
     "        \n",
     "        self.readList = []\n",
     "        self.k = 5\n",
+    "        self.g = nx.MultiDiGraph()\n",
     "        for read in readList:\n",
     "            for i in xrange(len(read) - k + 1):\n",
     "                for kmer in (read[i:i+k], reverseComplement(read[i:i+k])):\n",
     "                    head = kmer[:-1]\n",
     "                    tail = kmer[1:]\n",
-    "                    self.add_node(head)\n",
-    "                    self.add_node(tail)\n",
-    "                    self.add_edge(head, tail, label=kmer)        "
+    "                    self.g.add_node(head)\n",
+    "                    self.g.add_node(tail)\n",
+    "                    self.g.add_edge(head, tail, label=kmer)        "
    ]
   },
   {
@@ -46,15 +46,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['AATCT', 'TGTAA', 'GATTA', 'ACAGA']\n"
+     ]
+    }
+   ],
    "source": [
     "fp = open('GASM.txt')\n",
     "readList = map(lambda x:x.strip(), fp.readlines())\n",
-    "fp.close()"
+    "fp.close()\n",
+    "print readList"
    ]
   },
   {
@@ -66,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -84,13 +93,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "A=nx.to_agraph(dG)\n",
+    "A=nx.to_agraph(dG.g)\n",
     "A.graph_attr.update(label='Debruijn graph', fontsize='20.0')\n",
     "A.node_attr.update(color='#336699', fontcolor='black')\n",
     "A.edge_attr.update(color='#99CC33', fontcolor='black')\n",
@@ -107,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -119,7 +128,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,6 +136,154 @@
    "source": [
     "from IPython import display\n",
     "display.Image('deburijnGraph.png')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "#Generate Euler path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def is_semieulerian(G):\n",
+    "    start, end = None, None\n",
+    "    if G.is_directed():\n",
+    "        for n in G.nodes_iter():\n",
+    "            if G.in_degree(n) +1 == G.out_degree(n):\n",
+    "                if start != None: return False\n",
+    "                else: start = n\n",
+    "            elif G.in_degree(n) == G.out_degree(n)+1:\n",
+    "                if end != None: return False\n",
+    "                else: end = n\n",
+    "            elif G.in_degree(n) != G.out_degree(n):\n",
+    "                return False\n",
+    "        g = G.copy()\n",
+    "        g.add_edge(end, start)\n",
+    "        if not nx.is_strongly_connected(g):return False\n",
+    "    return True\n",
+    "def semi2eulerian(G):\n",
+    "    start = None\n",
+    "    end = None\n",
+    "    if G.is_directed():\n",
+    "        for n in G.nodes_iter():\n",
+    "            if G.in_degree(n) +1 == G.out_degree(n):\n",
+    "                start = n\n",
+    "            elif G.in_degree(n) == G.out_degree(n)+1:\n",
+    "                end = n\n",
+    "            elif G.in_degree(n) != G.out_degree(n):\n",
+    "                return False\n",
+    "    G.add_edge(end, start)\n",
+    "    return start, end\n",
+    "def eulerPath(g):\n",
+    "    startNode = None\n",
+    "    path = []\n",
+    "    if nx.is_eulerian(g):\n",
+    "        cycle = list(nx.eulerian_circuit(g, startNode))\n",
+    "        path = cycle\n",
+    "    elif is_semieulerian(g):\n",
+    "        g = g.copy()\n",
+    "\n",
+    "        startNode, endNode = semi2eulerian(g)\n",
+    "        #print startNode, endNode\n",
+    "        #if nx.is_eulerian(g): print g.edges()\n",
+    "        cycle =  list(nx.eulerian_circuit(g, startNode))\n",
+    "        i = cycle.index((endNode, startNode))\n",
+    "        path = cycle[i+1:]+cycle[:i+1]\n",
+    "    return path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AAT->ATC->TCT->CTG->TGT->GTA->TAA->AAT->ATC\n",
+      "AATCTGTAATC\n",
+      "GAT->ATT->TTA->TAC->ACA->CAG->AGA->GAT->ATT\n",
+      "GATTACAGATT\n"
+     ]
+    }
+   ],
+   "source": [
+    "contigs = []\n",
+    "for i, subG in enumerate(nx.weakly_connected_component_subgraphs(dG.g, copy=True)):\n",
+    "    path = eulerPath(subG)\n",
+    "    superStr = ''\n",
+    "    walk = ''\n",
+    "    for p in path:\n",
+    "        walk += p[0]+'->'\n",
+    "        superStr += p[0][0]\n",
+    "    superStr += path[-1][0][1:]\n",
+    "    print walk[:-2]\n",
+    "    print superStr\n",
+    "    contigs.append(superStr)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "#Map reads to contig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------------------------\n",
+      ">AATCTGTAATC\n",
+      "+AATCT\n",
+      "+    TGTAA\n",
+      "-      TAATC\n",
+      "-  TCTGT\n",
+      "-------------------------\n",
+      ">GATTACAGATT\n",
+      "-      AGATT\n",
+      "-  TTACA\n",
+      "+GATTA\n",
+      "+    ACAGA\n"
+     ]
+    }
+   ],
+   "source": [
+    "for contig in contigs:\n",
+    "    print '-'*25\n",
+    "    print '>'+contig\n",
+    "    for read in readList:\n",
+    "        rev_read = reverseComplement(read)\n",
+    "        if read in contig:\n",
+    "            i = contig.index(read)\n",
+    "            print '+'+' '*i+read\n",
+    "        elif rev_read in contig:\n",
+    "            i = contig.index(rev_read)\n",
+    "            print '-'+' '*i+rev_read\n",
+    "        else:\n",
+    "            print ' '*len(contig)+read"
    ]
   },
   {
